name:               dom-lt
version:            0.1.4
cabal-version:      >= 1.10
build-type:         Simple
license:            BSD3
license-file:       LICENSE
category:           Algorithms, Graphs
author:             Matt Morrow
copyright:          (c) Matt Morrow, 2009
maintainer:         Andreas Klebinger <klebinger.andreas@gmx.at>
stability:          stable
synopsis:           The Lengauer-Tarjan graph dominators algorithm.
description:        .

Extra-Source-Files:
  Changelog.md

library
  Default-Language: Haskell2010
  includes:
  build-tools:
  extra-libraries:
  hs-source-dirs:   .
  ghc-options:      -O2 -funbox-strict-fields -Wall -Wno-name-shadowing
  default-extensions: RankNTypes
  build-depends:    base>=4.9, array, containers >= 0.5
  exposed-modules:  Data.Graph.Dom

test-suite dom-lt-tests
  Default-Language: Haskell2010
  type: exitcode-stdio-1.0

  Main-Is:  Main.hs
  hs-source-dirs: tests

  Build-Depends: base, dom-lt, containers

  default-extensions:
  Ghc-Options: -O2 -Wall

benchmark dom-lt-bench
  Default-Language: Haskell2010
  type: exitcode-stdio-1.0

  Main-Is:  Main.hs
  hs-source-dirs: benchmarks

  Build-Depends: base, dom-lt, containers, criterion >= 1.4, deepseq
  default-extensions:

  Ghc-Options: -O2 -Wall -fno-full-laziness

