name:               dom-lt
version:            0.2.4
cabal-version:      >= 1.10
build-type:         Simple
license:            BSD3
license-file:       LICENSE
category:           Algorithms, Graphs
author:             Matt Morrow
copyright:          (c) Matt Morrow, 2009
maintainer:         Andreas Klebinger <klebinger.andreas@gmx.at>
bug-reports:        https://github.com/AndreasPK/dom-lt/issues
stability:          stable
synopsis:           The Lengauer-Tarjan graph dominators algorithm.
description:
    The Lengauer-Tarjan graph dominators algorithm.

    Included are ways to compute domination and post-domination relationships.

tested-with:
  --
  GHC == 9.12.2 || == 9.10.1 || == 9.8.4 || == 9.6.7 || == 9.4.8 || == 8.10.3 || == 8.0.2

Extra-Source-Files:
  Changelog.md

source-repository head
  type: git
  location: https://github.com/AndreasPK/dom-lt

library
  Default-Language: Haskell2010
  includes:
  build-tools:
  extra-libraries:
  hs-source-dirs:   .

  ghc-options:
      -O2 -funbox-strict-fields

  if impl(ghc >= 9.4)
    -- Improves perf by 5-9% on my box
    ghc-options: -fworker-wrapper-cbv

  default-extensions: RankNTypes
  build-depends:
      -- base version for ghc-7.10.3
      base >= 4.8.2 && < 5
    , array
    , containers >= 0.6 && < 0.9
  exposed-modules:
    Data.Graph.Dom,
    Data.Graph.Dom.Internal

test-suite dom-lt-tests
  Default-Language: Haskell2010
  type: exitcode-stdio-1.0

  Main-Is:  Main.hs
  hs-source-dirs: tests

  build-depends:
      base                        >=4.8.2   && <5
    , dom-lt
    , containers
    , HUnit                       >=1.3   && <1.7

  default-extensions:
  Ghc-Options: -Wall

benchmark dom-lt-bench
  Default-Language: Haskell2010
  type: exitcode-stdio-1.0

  Main-Is:  Main.hs
  hs-source-dirs: benchmarks

  Build-Depends:
      base,
      dom-lt,
      containers,
      -- Technically older still works but we want the µ bugfix
      criterion >= 1.5.3.0,
      deepseq
  default-extensions:

  Ghc-Options: -O2 -fno-full-laziness
